2008-02-17 12:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewEditor.m
	* GormCore/GormViewWindow.m: Minor correction to view resizing for
	windowless views to show contents properly.  Still working on
	editor issues.

2008-02-17 01:07-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormInternalViewEditor.m
	* GormCore/GormScrollViewEditor.m
	* GormCore/GormSplitViewEditor.m
	* GormCore/GormViewEditor.m
	* GormCore/GormViewWithContentViewEditor.m: Corrections for bug#18171.
	Fixes issues with grouping and ungrouping.

2008-02-16 20:54-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormSliderAttributesInspector.m: Cleaned up
	code to use NSOnState and NSOffState properly, since we can't depend
	on them always reflecting YES and NO respectively.
	* Palettes/3Containers/GormTableViewAttributesInspector.m:
	Corrected call in ok: to use enclosingScrollView instead of 
	simply getting the superview of the table.  This corrects bug#22333.

2008-02-09  Adam Fedor  <fedor@gnu.org>

	* GormCore/GormGenericEditor.m ([GormGenericEditor -refreshCells]): 
	Avoid segfault on solaris machines.

2008-02-09 12:15-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassEditor.m
	* GormCore/GormGenericEditor.m
	* GormCore/GormObjectEditor.m: Change background color of 
	object view.

2008-01-10  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.postamble (LN_S_RECURSIVE): For
	backwards-compatibility with older versions of gnustep-make,
	define to be the same as LN_S if not defined yet.	
	(before-all): Use RM_LN_S to delete the symlink, and use
	LN_S_RECURSIVE to create it.
	(after-clean): Use RM_LN_S to delete the symlink.

	* GormPrefs/GormPrefController.m ([-init]): Avoid compiler
	warning.
	
2008-01-07 20:04-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/0Menus/GormMenuItemAttributesInspector.h