@@ -1,3 +1,8 @@
+2008-02-18 20:31-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/2Controls/GormPopUpButtonEditor.m: Change to use helper
+	method to set up "preferred edge" correctly.
+
 2008-02-17 12:49-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormViewEditor.m
